[tool.poetry]
name = "hackerrank_challenges"
version = "0.1.0"
description = "Just hackerrank challenges"
authors = ["Alfonso Montilla <montilla05alfonso@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
mypy = "^0.961"
flake8 = "^4.0.1"
black = "^22.3.0"
autopep8 = "^1.6.0"
pytest = "^7.1.3"
pytest-mock = "^3.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
