[tool.poetry]
name = "hackerrank_challenges"
version = "0.1.0"
description = "Just hackerrank challenges"
authors = ["Alfonso Montilla <montilla05alfonso@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mypy = "=1.*"
flake8 = "=7.*"
black = "=22.*"
autopep8 = "=1.*"
pytest = "^7.4.4"
pytest-mock = "^3.12.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"
bandit = "^1.7.7"
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
